--- a/starter/index.html
+++ b/starter/index.html
@@ -27,7 +27,11 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button class="btn1">Answer 1</button>
+          <button class="btn2">Answer 2</button>
+          <button class="btn3">Answer 3</button>
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
