BTn next question works ...

--- a/starter/index.html
+++ b/starter/index.html
@@ -32,6 +32,7 @@
           <button class="answer button">Answer 2</button>
           <button class="answer button">Answer 3</button>
         </div>
+        <button id="next">Next Question</button>
       </div>
 
       <div id="end-screen" class="hide">
