--- a/starter/index.html
+++ b/starter/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Coding Quiz</title>
 
-  <body>
-    <audio src="./assets/sfx/correct.wav" class="hide correct"></audio>
-    <audio src="./assets/sfx/incorrect.wav" class="hide incorrect"></audio>
-    <div class="scores"><a href="highscores.html">View Highscores</a></div>
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+</head>
 
-    <div class="timer">Time: <span id="time">0</span></div>
+<body>
+  <audio src="./assets/sfx/correct.wav" class="hide correct"></audio>
+  <audio src="./assets/sfx/incorrect.wav" class="hide incorrect"></audio>
+  <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="wrapper">
-      <div id="start-screen" class="start">
-        <h1>Coding Quiz Challenge</h1>
-        <p>
-          Try to answer the following code-related questions within the time
-          limit. Keep in mind that incorrect answers will penalize your
-          score/time by ten seconds!
-        </p>
-        <button id="start">Start Quiz</button>
+  <div class="timer">Time: <span id="time">0</span></div>
+
+  <div class="wrapper">
+    <div id="start-screen" class="start">
+      <div class="container-head">
+        <img src="./assets/img/mq_logo_large_slide.png">
+        
+        <img src="../starter/assets/img/think.png">
       </div>
-
-      <div id="questions" class="hide">
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices">
-          <button class="answer button">Answer 1</button>
-          <button class="answer button">Answer 2</button>
-          <button class="answer button">Answer 3</button>
-        </div>
-        <button id="next">Next Question</button>
-      </div>
-
-      <div id="end-screen" class="hide">
-        <h2>All done!</h2>
-        <p>Your final score is <span id="final-score"></span>.</p>
-        <p>
-          Enter initials: <input type="text" id="initials" max="3" />
-          <button id="submit">Submit</button>
-        </p>
-      </div>
-
-      <div id="feedback" class="feedback hide"></div>
+      <p>
+        Hello everyone! Welcome to the "Math Challenge: Test Your Knowledge." I'm excited to be your host today. Are you ready to put your math skills to the test?
+      </p>
+      <button id="start">Start Quiz</button>
     </div>
 
-   <script src="./assets/js/logic.js"></script>
-  </body>
+    <div id="questions" class="hide">
+      <h2 id="question-title"></h2>
+      <div id="choices" class="choices">
+        <button class="answer button">Answer 1</button>
+        <button class="answer button">Answer 2</button>
+        <button class="answer button">Answer 3</button>
+      </div>
+      <button id="next">Next Question</button>
+    </div>
+
+    <div id="end-screen" class="hide">
+    </div>
+
+  </div>
+
+  <script src="./assets/js/logic.js"></script>
+</body>
+
 </html>
