--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -10,14 +10,13 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="wrapper ">
       <h1>Highscores</h1>
-      <ol id="highscores"></ol>
-
+      <ul id="high-scores"></ul>
       <a href="index.html"><button>Go Back</button></a>
-      <button id="clear">Clear Highscores</button>
+      <button id="remove">Clear Scores</button>
     </div>
 
-    <script src="./assets/js/scores.js"></script>
+  <script src="./assets/js/scores.js"></script>
   </body>
 </html>
