fixed error ckick btn clear

--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -17,6 +17,8 @@
       <button id="remove">Clear Scores</button>
     </div>
 
-  <script src="./assets/js/scores.js"></script>
+  <script src="./assets/js/scores.js">
+  
+  </script>
   </body>
 </html>
