HTML - added footer

--- a/starter/index.html
+++ b/starter/index.html
@@ -21,11 +21,11 @@
     <div id="start-screen" class="start">
       <div class="container-head">
         <img src="./assets/img/mq_logo_large_slide.png">
-        
         <img src="../starter/assets/img/boyThinking.png">
       </div>
       <p>
-        Hello everyone! Welcome to the "Math Challenge: Test Your Knowledge." I'm excited to be your host today. Are you ready to put your math skills to the test?
+        Hello everyone! Welcome to the "Math Challenge: Test Your Knowledge." I'm excited to be your host today. Are you
+        ready to put your math skills to the test?
       </p>
       <button id="start">Start Quiz</button>
     </div>
@@ -44,6 +44,9 @@
     </div>
 
   </div>
+  <footer>
+    <p style="text-align: center;"><strong>$%^& Copyright © Ramon Andrade $%^&</strong></p>
+  </footer>
 
   <script src="./assets/js/logic.js"></script>
   <script src="./assets/js/scores.js"></script>
