FavIcon + removed img from header

--- a/starter/index.html
+++ b/starter/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../starter/assets/img/boyThinking.png">
   <title>Coding Quiz</title>
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -21,7 +22,6 @@
     <div id="start-screen" class="start">
       <div class="container-head">
         <img src="./assets/img/mq_logo_large_slide.png">
-        <img src="../starter/assets/img/boyThinking.png">
       </div>
       <p>
         Hello everyone! Welcome to the "Math Challenge: Test Your Knowledge." I'm excited to be your host today. Are you
