--- a/starter/index.html
+++ b/starter/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./starter/assets/img/boyThinking.jpeg">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/thinking.png">
   <title>Coding Quiz</title>
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
