--- a/starter/index.html
+++ b/starter/index.html
@@ -22,6 +22,8 @@
     <div id="start-screen" class="start">
       <div class="container-head">
         <img src="./assets/img/mq_logo_large_slide.png">
+        <img src="./assets/img/thinking.png">
+
       </div>
       <p>
         Hello everyone! Welcome to the "Math Challenge: Test Your Knowledge." I'm excited to be your host today. Are you
