FavIcon +  img from header

--- a/starter/index.html
+++ b/starter/index.html
@@ -22,7 +22,7 @@
     <div id="start-screen" class="start">
       <div class="container-head">
         <img src="./assets/img/mq_logo_large_slide.png">
-        <img src="./assets/img/thinking.png">
+        <img src="./assets/img/boyThinking.jpeg">
 
       </div>
       <p>
